# declearndraft

./: .gitignore  AUTHORS  README.md  log.txt  mkdocs.yml  pyproject.toml  tox.ini
ci/: Dockerfile
declearn/: __init__.py  typing.py  version.py
declearn/aggregator/: __init__.py  _api.py  _avg.py  _gma.py  _sum.py
declearn/client_sampler/: __init__.py  _api.py  _composition.py  _config.py  _criterion_sampler.py  _default.py  _uniform.py  _weighted.py
declearn/client_sampler/criterion/: __init__.py  _api.py  _criteria.py
declearn/communication/: __init__.py
declearn/communication/api/: __init__.py  _client.py  _server.py
declearn/communication/grpc/: __init__.py  _client.py  _server.py
declearn/communication/utils/: __init__.py  _build.py  _parse.py
declearn/communication/websockets/: __init__.py  _client.py  _server.py  _tools.py
declearn/data_info/: __init__.py  _base.py  _fields.py
declearn/dataset/: __init__.py  _base.py  _inmemory.py  _split_data.py
declearn/dataset/examples/: __init__.py  _heart_uci.py  _mnist.py
declearn/dataset/tensorflow/: __init__.py  _tensorflow.py
declearn/dataset/torch/: __init__.py  _torch.py  _utils.py
declearn/dataset/utils/: __init__.py  _save_load.py  _sparse.py  _split_classif.py
declearn/fairness/: __init__.py
declearn/fairness/api/: __init__.py  _client.py  _dataset.py  _fair_func.py  _metrics.py  _server.py
declearn/fairness/core/: __init__.py  _functions.py  _inmemory.py
declearn/fairness/fairbatch/: __init__.py  _client.py  _dataset.py  _fedfb.py  _messages.py  _sampling.py  _server.py
declearn/fairness/fairfed/: __init__.py  _aggregator.py  _client.py  _fairfed.py  _messages.py  _server.py
declearn/fairness/fairgrad/: __init__.py  _client.py  _messages.py  _server.py
declearn/fairness/monitor/: __init__.py  _client.py  _server.py
declearn/main/: __init__.py  _client.py  _server.py
declearn/main/config/: __init__.py  _dataclasses.py  _run_config.py  _strategy.py
declearn/messaging/: __init__.py  _api.py  _base.py  _fairness.py
declearn/metrics/: __init__.py  _api.py  _classif.py  _mean.py  _roc_auc.py  _rsquared.py  _utils.py  _wrapper.py
declearn/model/: __init__.py  _utils.py
declearn/optimizer/: __init__.py  _base.py  _utils.py
declearn/quickrun/: __init__.py  _config.py  _parser.py  _run.py
declearn/secagg/: __init__.py  _setup.py  messaging.py
declearn/test_utils/: __init__.py  _argparse.py  _assertions.py  _client_sampler.py  _convert.py  _gen_ssl.py  _imports.py  _network.py  _secagg.py  _vectors.py
declearn/training/: __init__.py  _constraints.py  _manager.py
declearn/utils/: __init__.py  _aggregate.py  _dataclass.py  _device_policy.py  _json.py  _logging.py  _multiprocess.py  _numpy.py  _register.py  _serialize.py  _toml_config.py
docs/: index.md  quickstart.md  setup.md
docs/devs-guide/: contribute.md  docs-style.md  tests.md
docs/release-notes/: SUMMARY.md  v2.4.1.md  v2.5.0.md  v2.5.1.md  v2.6.0.md  v2.6.1.md  v2.7.0.md  v2.8.0.md
docs/user-guide/: SUMMARY.md  client_sampling.md  fairness.md  fl_process.md  index.md  local_dp.md  optimizer.md  package.md  secagg.md  usage.md
examples/: readme.md
examples/flamby/: metric.py  readme.md  run_client.py  run_demo.py  run_server.py
examples/heart-uci/: client.py  data.py  readme.md  run.py  server.py
examples/mnist/: generate_ssl.py  prepare_data.py  readme.md  run_client.py  run_demo.py
examples/mnist_g5k/: generate_ssl.py  readme.md  run_client.py  run_grid5k.py  run_server.py
examples/mnist_quickrun/: config.toml  model.py  model_torch.py
examples/nlp/: dataset.py  model.py  prepare_data.py  readme.md  run_client.py  run_demo.py  run_server.py
profiling/: -  README.md  benchmark_analysis.ipynb  overhead_check.py  overhead_check_sub.py  profile_benchmark.py  quickrun_runner.py  report (1).ipynb  report.ipynb  run_profile.py  visualise.ipynb  visualise2.ipynb
profiling/.ipynb_checkpoints/: report-checkpoint.ipynb
profiling2/: cProfile.ipynb  docs.md  memray_run.py  profile_run.py  scalene_run.py  tree.txt  visualise.py  yappi_run.py
scripts/: gen_docs.py  run_tests.sh
test/: conftest.py
test/aggregator/: test_aggregator.py
test/client_sampler/: conftest.py  test_criterion.py  test_from_specs.py  test_sampler.py
test/communication/: conftest.py  test_exchanges.py  test_grpc.py  test_network_server.py  test_utils.py
test/data_info/: test_classes_field.py  test_data_info_utils.py  test_datatype_field.py  test_nbsamples_field.py  test_shape_field.py
test/dataset/: dataset_testbase.py  test_dataset_utils.py  test_examples.py  test_inmemory.py  test_split_multi_classif.py  test_tensorflow_dataset.py  test_torch_dataset.py
test/fairness/: test_accuracy_computer.py  test_fairness_functions.py  test_fairness_inmemory_dataset.py
test/functional/: conftest.py  test_main.py  test_quickrun.py  test_toy_clf_fairness.py  test_toy_clf_secagg.py  test_toy_clisampling.py  test_toy_reg.py
test/main/: test_checkpoint.py  test_config_optim.py  test_data_info.py  test_early_stopping.py  test_main_client.py  test_main_server.py
test/metrics/: metric_testing.py  test_binary_apr.py  test_binary_roc.py  test_mae_mse.py  test_metricset.py  test_multi_apr.py  test_rsquared.py
test/model/: model_testing.py  test_haiku_model.py  test_sksgd_model.py  test_tflow_model.py  test_torch_model.py
test/optimizer/: conftest.py  optim_testing.py  test_modules.py  test_noise.py  test_optimizer.py  test_regularizers.py  test_scaffold.py  test_schedulers.py  test_tflow_optim.py  test_torch_optim.py
test/quickrun/: test_quickrun_utils.py
test/secagg/: test_identity_keys.py  test_prime_utils.py  test_quantizer.py  test_shamir.py  test_x3dh.py  test_x3dh_setup.py
test/training/: test_train_manager.py  test_train_manager_dp.py
test/utils/: test_json.py  test_multiprocess.py  test_register.py  test_serialize.py  test_toml.py
test/vector/: conftest.py  test_generic_vector.py  test_jaxnp_vector.py  test_numpy_vector.py  test_tflow_vector.py  test_torch_vector.py  vector_testing.py
(+112 files in other folders)
